--- a/static/main.css
+++ b/static/main.css
@@ -13,11 +13,11 @@ body {
   }
   
   .site-header .navbar-nav .nav-link {
-    color: #cbd5db;
+    color: #ffffff;
   }
   
   .site-header .navbar-nav .nav-link:hover {
-    color: #ffffff;
+    color: #00ffe1;
   }
   
   .site-header .navbar-nav .nav-link.active {
@@ -25,9 +25,9 @@ body {
   }
   
   .content-section {
-    background: #ffffff;
+    background: #002339;
     padding: 10px 20px;
-    border: 1px solid #dddddd;
+    border: 1px solid #005082;
     border-radius: 3px;
     margin-bottom: 20px;
   }
@@ -77,4 +77,12 @@ body {
   
   .account-heading {
     font-size: 2.5rem;
+  }
+
+  .form-group {
+    color: hsl(186, 100%, 35%);
+  }
+  .invalid-feedback span {
+    color: red;
+    font-weight: bold;
   }
