--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,23 @@
 {% extends "layout.html" %}
 {% block content %}
 <nav class="wal">
-    <a href="#">Class 01</a>
-    <a href="#">Class 02</a>
-    <a href="#">Class 03</a>
-    <a href="#">Class 04</a>
+    <a href="./sclass1">Class 01</a>
+    <a href="./sclass2">Class 02</a>
+    <a href="./sclass3">Class 03</a>
+    <a href="./sclass4">Class 04</a>
     <div class="animation start-home"></div>
 </nav>
 <br>
 <br>
 <article class="leaderboard">
   <header>
-    <h1 class="leaderboard__title"><span class="leaderboard__title--top">Class 1</span><span class="leaderboard__title--bottom">Studens</span></h1>
+    {% if current_user.is_authenticated %}
+    <h1 class="leaderboard__title"><span class="leaderboard__title--top">Welcome to {{ name }}'s school</span><span class="leaderboard__title--bottom">with OrgSchool</span></h1>
+    {% else %}
+    <h1 class="leaderboard__title"><span class="leaderboard__title--top">Welcome to Your school</span><span class="leaderboard__title--bottom">with OrgSchool</span></h1>
+    {% endif %}
   </header>
-  <main class="leaderboard__profiles">
-    <article class="leaderboard__profile">
-      <span class="leaderboard__value2">2-</span>
-      <span class="leaderboard__name">Mark Zuckerberg</span>
-      <span class="leaderboard__value">20<span>yo</span></span>
-    </article>
-  </main>
+  
 </div>
 </article>
 {% endblock content %}
