--- a/static/style3.css
+++ b/static/style3.css
@@ -1,4 +1,4 @@
-button {
+.adding {
   --c:  #13dc7e; /* the color*/
   
   box-shadow: 0 0 0 .1em inset var(--c); 
@@ -12,17 +12,17 @@ button {
   outline-offset: .1em;
   transition: background-size .4s, background-position 0s .4s;
 }
-button:hover {
+.adding:hover {
   --_p: 100%;
   transition: background-position .4s, background-size 0s;
 }
-button:active {
+.adding:active {
   box-shadow: 0 0 9e9q inset #0009; 
   background-color: var(--c);
   color: #fff;
 }
 
-button {
+.adding {
   font-family: system-ui, sans-serif;
   font-size: 1.5rem;
   cursor: pointer;
@@ -34,3 +34,148 @@ button {
   left: 25%;
   background-color: rgb(0, 82, 82);
 }
+/**/
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+.hamburger {
+  position: relative;
+  width: 30px;
+  height: 30px;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  padding: 20px;
+  
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 20px;
+    background: #024584;  /* fallback for old browsers */
+  }
+}
+
+.menu-button-wrapper {
+  position: relative;
+  display: inline-block;
+  
+  .item-list {
+    position: absolute;
+    top: 70px;
+    
+    transform-origin: center;
+    transition: all 0.4s cubic-bezier(0.54, -0.10, 0.57, 0.57);
+    width: 200px;
+    left: 50%;
+    padding: 15px 0;
+    text-align: left;
+    border-radius: 100px;
+    font-weight: 300;
+    opacity: 0;
+    user-select: none;
+    
+    div {
+      padding: 10px 30px;
+      cursor: pointer;
+    }
+  }
+  
+  .menu-button {
+    position: absolute;
+    width: 70px;
+    height: 70px;
+    left: 0;
+    z-index: 2;
+    opacity: 0;
+    cursor: pointer;
+  }
+}
+.menu-button {
+  &:checked ~ .item-list {
+    transform: translateX(-50%) scale(1);
+    border-radius: 20px;
+    opacity: 1;
+    user-select: auto;
+  }
+}
+/**/
+.container2 {
+  position: absolute;
+  transform: translate(-100%, -90%);
+  width: 250px;
+  height: 320px;
+  border-radius: 20px;
+  box-sizing: border-box;
+  background: #ecf0f3;
+  box-shadow: 14px 14px 20px #00253f, -14px -14px 20px rgb(1, 37, 77);
+  font-family: poppins;
+}
+.inputs {
+  text-align: left;
+  margin-top: 30px;
+  margin-right: 30px;
+}
+.container2 input{
+  display: block;
+  width: 100%;
+  padding: 0;
+  border: none;
+  outline: none;
+  box-sizing: border-box;
+}
+.container2 input::placeholder {
+  color: gray;
+}
+.container2 input {
+  background: #ecf0f3;
+  padding: 10px;
+  padding-left: 20px;
+  height: 50px;
+  font-size: 14px;
+  border-radius: 50px;
+  box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px white;
+}
+/**/
+.container3 {
+  position: absolute;
+  transform: translate(100%, -90%);
+  width: 250px;
+  height: 320px;
+  border-radius: 20px;
+  box-sizing: border-box;
+  background: #ecf0f3;
+  box-shadow: 14px 14px 20px #00253f, -14px -14px 20px #00253f;
+  font-family: poppins;
+}
+.inputs {
+  text-align: left;
+  margin-top: 30px;
+  margin-right: 30px;
+}
+.container3 input{
+  display: block;
+  width: 100%;
+  padding: 0;
+  border: none;
+  outline: none;
+  box-sizing: border-box;
+}
+.container3 input::placeholder {
+  color: gray;
+}
+.container3 input {
+  background: #ecf0f3;
+  padding: 10px;
+  padding-left: 20px;
+  height: 50px;
+  font-size: 14px;
+  border-radius: 50px;
+  box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px white;
+}
+
