adding feuture is working

--- a/templates/sclass1.html
+++ b/templates/sclass1.html
@@ -24,8 +24,13 @@
           <div class="item-list">
             <div class="container2">
               <form action="/sclass1" method="post" class="inputs">
-                <input type="text" name="name" placeholder="Name">
-                <input type="submit" value="Add teacher" class="sub">
+                <input type="text" name="name" placeholder="Name" class="name">
+                {% if current_user.is_authenticated %}
+                <input type="hidden" name="sclass_id" value="{{ sclass_id }}" class="sclass_id">
+                {% else %}
+                <input type="hidden" name="sclass_id" value="default_value" class="sclass_id">
+                {% endif %}
+                <input type="submit" value="Add teacher" class="sub2">
               </form>
             </div>
           </div>
@@ -43,8 +48,13 @@
           <div class="item-list">
             <div class="container3">
               <form action="/sclass1" method="post" class="inputs">
-                <input type="text" name="name" placeholder="Name">
-                <input type="submit" value="Delete teacher" class="sub">
+                <input type="text" name="name" placeholder="Name" class="name">
+                {% if current_user.is_authenticated %}
+                <input type="hidden" name="sclass_id" value="{{ sclass_id }}" class="sclass_id">
+                {% else %}
+                <input type="hidden" name="sclass_id" value="default_value" class="sclass_id">
+                {% endif %}
+                <input type="submit" value="delete teacher" class="sub3">
               </form>
             </div>
           </div>
@@ -84,9 +94,14 @@
         <div class="item-list">
           <div class="container2">
             <form action="/sclass1" method="post" class="inputs">
-              <input type="text" name="name" placeholder="Name">
-              <input type="text" name="age" placeholder="Age">
-              <input type="submit" value="Add student" class="sub">
+              <input type="text" name="name" placeholder="Name" class="name2">
+              <input type="number" name="age" placeholder="Age" class="age">
+              {% if current_user.is_authenticated %}
+              <input type="hidden" name="sclass_id" value="{{ sclass_id }}" class="sclass_id">
+              {% else %}
+              <input type="hidden" name="sclass_id" value="default_value" class="sclass_id">
+              {% endif %}
+              <input type="submit" value="Add student" class="sub4">
             </form>
           </div>
         </div>
@@ -103,10 +118,7 @@
         </div>
         <div class="item-list">
           <div class="container3">
-            <form action="/sclass1" method="post" class="inputs">
-              <input type="text" name="name" placeholder="Name">
-              <input type="submit" value="Delete student" class="sub">
-            </form>
+
           </div>
         </div>
       </label>
