delete teacher working

--- a/templates/sclass1.html
+++ b/templates/sclass1.html
@@ -118,7 +118,18 @@
         </div>
         <div class="item-list">
           <div class="container3">
-
+            <form action="/sclass1" method="post" class="inputs">
+              <input type="number" name="number" placeholder="Number" class="number">
+              {% if current_user.is_authenticated %}
+              <input type="hidden" name="sclass_id" value="{{ sclass_id }}" class="sclass_id">
+              {% for st in students %}
+              <input type="hidden" name="students" value="{{ st }}" class="student">
+              {% endfor %}
+              {% else %}
+              <input type="hidden" name="sclass_id" value="default_value" class="sclass_id">
+              {% endif %}
+              <input type="submit" value="Delete student" class="sub5">
+            </form>
           </div>
         </div>
       </label>
