creating landing page

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,174 @@
-{% extends "layout.html" %}
-{% block content %}
-<h1>About Us (OrgSchool)</h1>
-{% endblock content %}
+<!DOCTYPE html>
+<html lang="en" class="no-js">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>About</title>
+    <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|IBM+Plex+Sans:600" rel="stylesheet">
+    <link rel="stylesheet" href="../static/style4.css">
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+</head>
+<body class="is-boxed has-animations">
+    <div class="body-wrap boxed-container">
+        <header class="site-header">
+            <div class="container">
+                <div class="site-header-inner">
+                    <div class="brand header-brand">
+                        <h1 class="m-0">
+                            <a href="/home">
+								<img class="header-logo-image asset-light" src="../static/images/OrgSchool_LOGO_black.png" alt="Logo" width="100" height="100">
+								<img class="header-logo-image asset-dark" src="../static/images/OrgSchool_white.png" alt="Logo" width="100" height="100">
+                            </a>
+                        </h1>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+        <main>
+            <section class="hero">
+                <div class="container">
+                    <div class="hero-inner">
+						<div class="hero-copy">
+	                        <h1 class="hero-title mt-0">Make it easy<br> with OrgSchool</h1>
+	                        <p class="hero-paragraph">Simplify administrative tasks by effortlessly adding, deleting students and teachers.</p>
+	                        <div class="hero-cta">
+								<a class="button button-primary" href="/register">Get started now</a>
+								<div class="lights-toggle">
+									<input id="lights-toggle" type="checkbox" name="lights-toggle" class="switch">
+									<label for="lights-toggle" class="text-xs"><span>Turn me <span class="label-text">dark</span></span></label>
+								</div>
+							</div>
+						</div>
+						<div class="hero-media">
+							<div class="hero-media-illustration">
+								<img class="hero-media-illustration-image asset-light" src="../static/images/hero-media-illustration-light.svg" alt="Hero media illustration">
+								<img class="hero-media-illustration-image asset-dark" src="../static/images/hero-media-illustration-dark.svg" alt="Hero media illustration">
+							</div>
+							<div class="hero-media-container">
+								<img class="hero-media-image asset-light" src="../static/images/OrgSchool3.gif" alt="Hero media">
+								<img class="hero-media-image asset-dark" src="../static/images/OrgSchool_GIF2.gif" alt="Hero media">
+							</div>
+						</div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="features section">
+                <div class="container">
+					<div class="features-inner section-inner has-bottom-divider">
+						<div class="features-header text-center">
+							<div class="container-sm">
+								<h2 class="section-title mt-0">The Platform</h2>
+	                            <p class="section-paragraph">Our user-friendly platform offers seamless management of student enrollment and teacher assignments.</p>
+								<div class="features-image">
+									<img class="features-illustration asset-dark" src="../static/images/features-illustration-dark.svg" alt="Feature illustration">
+                                    <img class="features-box asset-dark" src="../static/images/O2.jpg" alt="Feature box" width="550">
+									<img class="features-illustration asset-dark" src="../static/images/features-illustration-top-dark.svg" alt="Feature illustration top">
+									<img class="features-illustration asset-light" src="../static/images/features-illustration-light.svg" alt="Feature illustration">
+									<img class="features-box asset-light" src="../static/images/O2.jpg" alt="Feature box" width="550">
+									<img class="features-illustration asset-light" src="../static/images/features-illustration-top-light.svg" alt="Feature illustration top">
+								</div>
+							</div>
+                        </div>
+                        <div class="features-wrap">
+                            <div class="feature is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+										<img class="asset-light" src="../static/images/feature-01-light.svg" alt="Feature 01">
+										<img class="asset-dark" src="../static/images/feature-01-dark.svg" alt="Feature 01">
+                                    </div>
+									<div class="feature-content">
+                                    	<h3 class="feature-title mt-0">functionality</h3>
+                                    	<p class="text-sm mb-0">intuitive features for easy addition and removal of users.</p>
+									</div>
+								</div>
+                            </div>
+							<div class="feature is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+										<img class="asset-light" src="../static/images/feature-02-light.svg" alt="Feature 02">
+										<img class="asset-dark" src="../static/images/feature-02-dark.svg" alt="Feature 02">
+                                    </div>
+									<div class="feature-content">
+                                    	<h3 class="feature-title mt-0">streamline</h3>
+                                    	<p class="text-sm mb-0">streamlines administrative processes, allowing educational institutions to focus on fostering a conducive learning environment.</p>
+									</div>
+								</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+			<section class="cta section">
+                <div class="container-sm">
+                    <div class="cta-inner section-inner">
+                        <div class="cta-header text-center">
+                            <h2 class="section-title mt-0">Get start</h2>
+                            <p class="section-paragraph">Join us in revolutionizing administrative efficiency in education.</p>
+							<div class="cta-cta">
+								<a class="button button-primary" href="/register">Join us</a>
+							</div>
+					    </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+
+        <footer class="site-footer has-top-divider">
+            <div class="container">
+                <div class="site-footer-inner">
+                    <div class="brand footer-brand">
+                        <a href="#">
+							<img class="header-logo-image asset-light" src="../static/images/OrgSchool_LOGO_black.png" alt="Logo" width="100" height="100">
+								<img class="header-logo-image asset-dark" src="../static/images/OrgSchool_white.png" alt="Logo" width="100" height="100">
+                        </a>
+                    </div>
+                    <ul class="footer-links list-reset">
+                        <li>
+                            <a href="mail:walaaeddine33@gmail.com">Contact</a>
+                        </li>
+                        <li>
+                            <a href="github.com/walaEddine01/">About us</a>
+                        </li>
+                        <li>
+                            <a href="#">Support</a>
+                        </li>
+                    </ul>
+                    <ul class="footer-social-links list-reset">
+                        <li>
+                            <a href="#">
+                                <span class="screen-reader-text">Linkedin</span>
+                                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="" fill="#FFF"/>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/w1laaeddine">
+                                <span class="screen-reader-text">X</span>
+                                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M16 3c-.6.3-1.2.4-1.9.5.7-.4 1.2-1 1.4-1.8-.6.4-1.3.6-2.1.8-.6-.6-1.5-1-2.4-1-1.7 0-3.2 1.5-3.2 3.3 0 .3 0 .5.1.7-2.7-.1-5.2-1.4-6.8-3.4-.3.5-.4 1-.4 1.7 0 1.1.6 2.1 1.5 2.7-.5 0-1-.2-1.5-.4C.7 7.7 1.8 9 3.3 9.3c-.3.1-.6.1-.9.1-.2 0-.4 0-.6-.1.4 1.3 1.6 2.3 3.1 2.3-1.1.9-2.5 1.4-4.1 1.4H0c1.5.9 3.2 1.5 5 1.5 6 0 9.3-5 9.3-9.3v-.4C15 4.3 15.6 3.7 16 3z" fill="#FFF"/>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="screen-reader-text">Google</span>
+                                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M7.9 7v2.4H12c-.2 1-1.2 3-4 3-2.4 0-4.3-2-4.3-4.4 0-2.4 2-4.4 4.3-4.4 1.4 0 2.3.6 2.8 1.1l1.9-1.8C11.5 1.7 9.9 1 8 1 4.1 1 1 4.1 1 8s3.1 7 7 7c4 0 6.7-2.8 6.7-6.8 0-.5 0-.8-.1-1.2H7.9z" fill="#FFF"/>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="footer-copyright">&copy; 2024 Switch, all rights reserved</div>
+                </div>
+            </div>
+        </footer>
+    </div>
+
+    <script src="../static/scripts/main.min.js"></script>
+</body>
+</html>
