--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,8 @@
   <header class="site-header">
     <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
       <div class="container">
-        <a class="aa" href="/">OrgSchool</a>
+        <img src="../static/imgs/OrgSchool_white.png" alt="" class="img" width="90" height="80">
+        <a class="aa" href="/home">OrgSchool</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
