--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,9 +15,9 @@
 
 
     {% if title %}
-        <title>Flask Blog - {{ title }}</title>
+        <title>OrgSchool - {{ title }}</title>
     {% else %}
-        <title>Flask Blog</title>
+        <title>OrgSchool</title>
     {% endif %}
 </head>
 <body>
